# MLIP-Adsorption-Workflow

./: .gitignore  C6.gjf  README.md  plan.md  plot.py  pyproject.toml  results.tsv
adsorption_ensemble/: __init__.py
adsorption_ensemble_pipline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: C6H14.gjf  FULL_USAGE.md  Phe.gjf  README.md  full_usage.ipynb  mCNB.gjf  oCNB.gjf  pCNB.gjf  progressive_teaching_workflow.ipynb
tests/: chemistry_cases.py  test_adsorption_workflow.py  test_adsorption_workflow_matrix.py  test_ase_autoadsorbate_crosscheck.py  test_autoresearch_artifact_suite.py  test_basin_dedup_mace_node_l2.py  test_basin_mapping_gallery.py  test_basin_mapping_robustness.py  test_basin_pipeline.py  test_basin_reporting.py  test_basin_signature_modes.py  test_benchmark_matching.py  test_benchmark_pose_audit.py  test_benchmark_reference_frames.py  test_benchmark_sentinels.py  test_binding_pairs.py  test_binding_surface_dedup.py  test_conformer_backend_benchmark.py  test_conformer_generator_backends.py  test_conformer_md_cli.py  test_conformer_md_pipeline.py  test_final_basin_identity_audit.py  test_flex_sampling_budget.py  test_fps_selector.py  test_full_repo_example.py  test_heterogeneous_surface_crosscheck.py  test_mace_inference.py  test_miller_metal_site_consistency.py  test_miller_monodentate_matrix.py  test_miller_monodentate_validation_audit.py  test_node_canonicalization.py  test_pose_sampler.py  test_pose_sweep.py  test_production_case_suite.py  test_relax_backends.py  test_schedule_strategy_matrix.py  test_site_primitives.py  (+9 more)
(+109 files in other folders)
