[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adsorption-ensemble-pipline"
version = "0.1.0"
description = "Adsorption ensemble workflow: surface/site detection, pose sampling, basin/node generation, and conformer MD utilities."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.21",
  "ase>=3.22",
  "scipy>=1.8",
  "matplotlib>=3.6",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["adsorption_ensemble*"]

